@startuml ERM

database User_Database {
  entity Application_Users {
    * **ID : ObjectId <<generated>>**
    --
    * Username : text
    * Password : text
    * Email : text
  }
}

database Chugong_Database {
  entity Users {
    * **ID : ObjectId <<generated>>**
    --
    * **Application_User_ID : ObjectId**
    * UserLvl : number
    * StrengthLvl : number
    * IntelligenceLvl : number
    * EnduranceLvl : number
    * CharismaLvl : number
    * VitalityLvl : number
    * DexterityLvl : number
  }

  entity Accepted_Quests {
    * **ID : ObjectId <<generated>>**
    --
    * **Market_Quest_ID : ObjectId <<FK>>**
    * **User_ID : ObjectId <<FK>>**
    * Status : Enum
  }

  entity Accepted_Questlines {
    * **ID : ObjectId <<generated>>**
    --
    * **Market_Questline_ID : ObjectId <<FK>>**
    * **User_ID : ObjectId <<FK>>**
    * Status : Enum
  }

  entity Quests {
    * **ID : ObjectId <<generated>>**
    --
    * Name : text
    * Description : text
    * Image : text
    * Reward : Array<text,int>
    * Published : bool
    * Author: ObjectId
  }

  entity Questlines {
    * **ID : ObjectId <<generated>>**
    --
    * Name : text
    * Description : text
    * Image : text
    * Quests : Array<int>
    * Reward : Array<text,int>
    * Published : bool
    * Author: ObjectId
  }
}

Application_Users ||.up.|| Users
Accepted_Questlines }o..|| Users
Accepted_Questlines }o..|| Questlines

Accepted_Quests }o..|| Users
Accepted_Quests }o..|| Quests

@enduml